--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,10 @@ build/
 ### Mac OS ###
 .DS_Store!/.idea/
 !/.idea/
+/.idea/.gitignore
+/.idea/checkstyle-idea.xml
+/.idea/codeStyles/codeStyleConfig.xml
+/.idea/encodings.xml
+/.idea/misc.xml
+/.idea/codeStyles/Project.xml
+/.idea/vcs.xml
